--- a/index.html
+++ b/index.html
@@ -8,28 +8,31 @@
     <link rel='icon' type='image/png' sizes='32x32' href='favicon-32x32.png'>
     <link rel='icon' type='image/png' sizes='96x96' href='favicon-96x96.png'>
     <link rel='stylesheet' href='css/common.css'>
+
     <title>Hit Test with Anchors</title>
-    <script src="https://cdn.jsdelivr.net/npm/resonance-audio/build/resonance-audio.min.js"></script>
   </head>
   <body>
     <header>
-      <details open>
+      <!-- <details open>
         <summary>Hit Test with Anchors</summary>
         <p>
           This sample demonstrates using hit testing to find intersections on real-world surfaces and then using Anchors to attach a virtual object to that location.
           <a class="back" href="./">Back</a>
         </p>
-      </details>
+      </details> -->
     </header>
     <script type="module">
+      import {WebXRButton} from './js/util/webxr-button.js';
       import {Scene} from './js/render/scenes/scene.js';
       import {Renderer, createWebGLContext} from './js/render/core/renderer.js';
       import {Node} from './js/render/core/node.js';
       import {Gltf2Node} from './js/render/nodes/gltf2.js';
       import {DropShadowNode} from './js/render/nodes/drop-shadow.js';
       import {vec3} from './js/render/math/gl-matrix.js';
+      import {Ray} from './js/render/math/ray.js';
 
       // XR globals.
+      let xrButton = null;
       let xrRefSpace = null;
       let xrViewerSpace = null;
       let xrHitTestSource = null;
@@ -44,44 +47,49 @@
       arObject.visible = false;
       scene.addNode(arObject);
 
-      let stereoModel = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
-      arObject.addNode(stereoModel);
+      let flower = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
+      arObject.addNode(flower);
 
       let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle.gltf'});
       reticle.visible = false;
       scene.addNode(reticle);
       let reticleHitTestResult = null;
 
-      // Audio scene globals
-      const audioContext = new AudioContext();
-      const resonance = new ResonanceAudio(audioContext);
-      resonance.output.connect(audioContext.destination);
-      audioContext.suspend();
+      // Having a really simple drop shadow underneath an object helps ground
+      // it in the world without adding much complexity.
+      let shadow = new DropShadowNode();
+      vec3.set(shadow.scale, 0.15, 0.15, 0.15);
+      arObject.addNode(shadow);
 
-      let audioBuffer = null;
-      fetch('media/sound/beep.mp3')
-        .then(r => r.arrayBuffer())
-        .then(ab => audioContext.decodeAudioData(ab))
-        .then(decoded => { audioBuffer = decoded; })
-        .catch(console.error);
+      let flowers = [];
 
-      // Create and start a looping bufferSource at `position`, return the source so we can stop it later.
-      function createAudioSource(position) {
-        if (audioContext.state === 'suspended') audioContext.resume();
-        const source3d = resonance.createSource();
-        source3d.setPosition(position[0], position[1], position[2]);
+      // Ensure the background is transparent for AR.
+      scene.clear = false;
 
-        const bufferSource = audioContext.createBufferSource();
-        bufferSource.buffer = audioBuffer;
-        bufferSource.loop = true;              // <-- loop continuously
-        bufferSource.connect(source3d.input);
-        bufferSource.start();
-        return bufferSource;
+      function initXR() {
+        xrButton = new WebXRButton({
+          onRequestSession: onRequestSession,
+          onEndSession: onEndSession,
+          textEnterXRTitle: "NTRD DEBUG",
+          textXRNotFoundTitle: "UNSUPPORTED",
+          textExitXRTitle: "EXIT",
+        });
+        document.querySelector('header').appendChild(xrButton.domElement);
+
+        if (navigator.xr) {
+          navigator.xr.isSessionSupported('immersive-ar')
+                      .then((supported) => {
+            xrButton.enabled = supported;
+          });
+        }
       }
 
       function onRequestSession() {
         return navigator.xr.requestSession('immersive-ar', {requiredFeatures: ['local', 'hit-test', 'anchors']})
-                           .then(onSessionStarted);
+                           .then((session) => {
+          xrButton.setSession(session);
+          onSessionStarted(session);
+        });
       }
 
       function onSessionStarted(session) {
@@ -89,101 +97,119 @@
         session.addEventListener('select', onSelect);
 
         if (!gl) {
-          gl = createWebGLContext({ xrCompatible: true });
+          gl = createWebGLContext({
+            xrCompatible: true
+          });
+
           renderer = new Renderer(gl);
+
           scene.setRenderer(renderer);
         }
 
         session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
 
-        session.requestReferenceSpace('viewer').then(refSpace => {
+        // In this sample we want to cast a ray straight out from the viewer's
+        // position and render a reticle where it intersects with a real world
+        // surface. To do this we first get the viewer space, then create a
+        // hitTestSource that tracks it.
+        session.requestReferenceSpace('viewer').then((refSpace) => {
           xrViewerSpace = refSpace;
-          return session.requestHitTestSource({ space: xrViewerSpace });
-        }).then(hitTestSource => {
-          xrHitTestSource = hitTestSource;
+          session.requestHitTestSource({ space: xrViewerSpace }).then((hitTestSource) => {
+            xrHitTestSource = hitTestSource;
+          });
         });
 
-        session.requestReferenceSpace('local').then(refSpace => {
+        session.requestReferenceSpace('local').then((refSpace) => {
           xrRefSpace = refSpace;
+
           session.requestAnimationFrame(onXRFrame);
         });
       }
 
       function onEndSession(session) {
-        // stop *all* audio on end
-        anchoredObjects.forEach(o => o.audioSource.stop());
-        anchoredObjects.length = 0;
+        anchoredObjects.clear();
         xrHitTestSource.cancel();
         xrHitTestSource = null;
         session.end();
       }
 
-      function onSessionEnded() {}
+      function onSessionEnded(event) {
+        xrButton.setSession(null);
+      }
 
       const MAX_ANCHORED_OBJECTS = 10;
       let anchoredObjects = [];
+      function addAnchoredObjectsToScene(anchor) {
+        let flower = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
+        scene.addNode(flower);
+        anchoredObjects.push({
+          anchoredObject: flower,
+          anchor: anchor
+        });
 
-      function addAnchoredObjectsToScene(anchor, position) {
-        let stereo = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
-        scene.addNode(stereo);
-
-        // start looping audio and keep its source
-        const audioSource = createAudioSource(position);
-
-        anchoredObjects.push({ anchoredObject: stereo, anchor, audioSource });
-
+        // For performance reasons if we add too many objects start
+        // removing the oldest ones to keep the scene complexity
+        // from growing too much.
         if (anchoredObjects.length > MAX_ANCHORED_OBJECTS) {
-          const old = anchoredObjects.shift();
-          // stop that stereo’s audio before removing
-          old.audioSource.stop();
-          scene.removeNode(old.anchoredObject);
-          old.anchor.delete();
+          let objectToRemove = anchoredObjects.shift();
+          scene.removeNode(objectToRemove.anchoredObject);
+          objectToRemove.anchor.delete();
         }
       }
 
-      function onSelect() {
-        if (!reticle.visible) return;
-        const pose = reticleHitTestResult.getPose(xrRefSpace).transform.position;
-        reticleHitTestResult.createAnchor().then(anchor => {
-          addAnchoredObjectsToScene(anchor, [pose.x, pose.y, pose.z]);
-        }, err => console.error("Could not create anchor:", err));
+      let rayOrigin = vec3.create();
+      let rayDirection = vec3.create();
+      function onSelect(event) {
+        if (reticle.visible) {
+          // Create an anchor.
+          reticleHitTestResult.createAnchor().then((anchor) => {
+            addAnchoredObjectsToScene(anchor);
+          }, (error) => {
+            console.error("Could not create anchor: " + error);
+          });
+        }
       }
 
+      // Called every time a XRSession requests that a new frame be drawn.
       function onXRFrame(t, frame) {
-        const session = frame.session;
-        const viewerPose = frame.getViewerPose(xrRefSpace);
+        let session = frame.session;
+        let pose = frame.getViewerPose(xrRefSpace);
 
         reticle.visible = false;
-        if (xrHitTestSource && viewerPose) {
-          const hits = frame.getHitTestResults(xrHitTestSource);
-          if (hits.length > 0) {
-            const hitPose = hits[0].getPose(xrRefSpace);
+
+        // If we have a hit test source, get its results for the frame
+        // and use the pose to display a reticle in the scene.
+        if (xrHitTestSource && pose) {
+          let hitTestResults = frame.getHitTestResults(xrHitTestSource);
+          if (hitTestResults.length > 0) {
+            let pose = hitTestResults[0].getPose(xrRefSpace);
             reticle.visible = true;
-            reticle.matrix = hitPose.transform.matrix;
-            reticleHitTestResult = hits[0];
+            reticle.matrix = pose.transform.matrix;
+            reticleHitTestResult = hitTestResults[0];
           }
         }
 
-        for (let {anchoredObject, anchor} of anchoredObjects) {
-          if (!frame.trackedAnchors.has(anchor)) continue;
-          const ap = frame.getPose(anchor.anchorSpace, xrRefSpace);
-          anchoredObject.matrix = ap.transform.matrix;
+        for (const {anchoredObject, anchor} of anchoredObjects) {
+          // only update the object's position if it's still in the list
+          // of frame.trackedAnchors
+          if (!frame.trackedAnchors.has(anchor)) {
+            continue;
+          }
+          const anchorPose = frame.getPose(anchor.anchorSpace, xrRefSpace);
+          anchoredObject.matrix = anchorPose.transform.matrix;
         }
 
         scene.startFrame();
+
         session.requestAnimationFrame(onXRFrame);
-        scene.drawXRFrame(frame, viewerPose);
+
+        scene.drawXRFrame(frame, pose);
+
         scene.endFrame();
       }
 
-      // auto-start AR
-      if (navigator.xr) {
-        navigator.xr.isSessionSupported('immersive-ar').then(supported => {
-          if (supported) {
-            window.addEventListener('click', () => onRequestSession(), { once: true });
-          }
-        });
-      }
+      // Start the XR application.
+      initXR();
     </script>
   </body>
 </html>
