--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       import {WebXRButton} from './js/util/webxr-button.js';
       import {Scene} from './js/render/scenes/scene.js';
       import {Renderer, createWebGLContext} from './js/render/core/renderer.js';
-      import {Node} from './js/render/core/node.js';
       import {Gltf2Node} from './js/render/nodes/gltf2.js';
       import {DropShadowNode} from './js/render/nodes/drop-shadow.js';
       import {vec3} from './js/render/math/gl-matrix.js';
@@ -40,19 +39,11 @@
       let scene = new Scene();
       scene.enableStats(false);
 
-      let arObject = new Node();
-      arObject.visible = false;
-      scene.addNode(arObject);
-
-      let stereoModel = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
-      arObject.addNode(stereoModel);
-
       let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle.gltf'});
       reticle.visible = false;
       scene.addNode(reticle);
       let reticleHitTestResult = null;
 
-      // Audio setup
       const audioContext = new AudioContext();
       const resonance = new ResonanceAudio(audioContext);
       resonance.output.connect(audioContext.destination);
@@ -65,14 +56,11 @@
         .then(decoded => { audioBuffer = decoded; })
         .catch(console.error);
 
-      // Ensure resume on interaction
-      window.addEventListener('click', () => {
-        if (audioContext.state === 'suspended') {
-          audioContext.resume();
-        }
-      });
+      const MAX_ANCHORED_OBJECTS = 10;
+      let anchoredObjects = [];
 
       function createAudioSource(position) {
+        if (audioContext.state === 'suspended') audioContext.resume();
         const source3d = resonance.createSource();
         source3d.setPosition(position[0], position[1], position[2]);
 
@@ -82,7 +70,82 @@
         bufferSource.connect(source3d.input);
         bufferSource.start();
 
-        return { bufferSource, source3d };
+        return {bufferSource, source3d};
+      }
+
+      function addAnchoredObjectsToScene(anchor, position) {
+        const stereo = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
+        stereo.visible = true;
+
+        let shadow = new DropShadowNode();
+        vec3.set(shadow.scale, 0.15, 0.15, 0.15);
+        stereo.addNode(shadow);
+
+        scene.addNode(stereo);
+
+        const audioSource = createAudioSource(position);
+
+        anchor.context = { sceneObject: stereo, audioSource };
+        anchoredObjects.push(anchor);
+
+        if (anchoredObjects.length > MAX_ANCHORED_OBJECTS) {
+          const old = anchoredObjects.shift();
+          old.context.audioSource.bufferSource.stop();
+          scene.removeNode(old.context.sceneObject);
+          old.delete();
+        }
+      }
+
+      function onSelect() {
+        if (!reticle.visible) return;
+        const pose = reticleHitTestResult.getPose(xrRefSpace).transform.position;
+        reticleHitTestResult.createAnchor().then(anchor => {
+          addAnchoredObjectsToScene(anchor, [pose.x, pose.y, pose.z]);
+        }, err => console.error("Could not create anchor:", err));
+      }
+
+      function onXRFrame(t, frame) {
+        const session = frame.session;
+        const viewerPose = frame.getViewerPose(xrRefSpace);
+
+        reticle.visible = false;
+        if (xrHitTestSource && viewerPose) {
+          const hits = frame.getHitTestResults(xrHitTestSource);
+          if (hits.length > 0) {
+            const hitPose = hits[0].getPose(xrRefSpace);
+            reticle.visible = true;
+            reticle.matrix = hitPose.transform.matrix;
+            reticleHitTestResult = hits[0];
+          }
+        }
+
+        if (viewerPose) {
+          resonance.setListenerFromMatrix({elements: viewerPose.transform.matrix});
+        }
+
+        for (const anchor of frame.trackedAnchors) {
+          const pose = frame.getPose(anchor.anchorSpace, xrRefSpace);
+          if (!pose || !anchor.context) continue;
+
+          const object = anchor.context.sceneObject;
+          const pos = [
+            pose.transform.matrix[12],
+            pose.transform.matrix[13],
+            pose.transform.matrix[14],
+          ];
+
+          object.matrix = pose.transform.matrix;
+          object.visible = true;
+
+          if (anchor.context.audioSource) {
+            anchor.context.audioSource.source3d.setPosition(pos[0], pos[1], pos[2]);
+          }
+        }
+
+        scene.startFrame();
+        session.requestAnimationFrame(onXRFrame);
+        scene.drawXRFrame(frame, viewerPose);
+        scene.endFrame();
       }
 
       function onRequestSession() {
@@ -117,7 +180,11 @@
       }
 
       function onEndSession(session) {
-        anchoredObjects.forEach(o => o.audioSource.stop());
+        for (const anchor of anchoredObjects) {
+          anchor.context.audioSource.bufferSource.stop();
+          scene.removeNode(anchor.context.sceneObject);
+          anchor.delete();
+        }
         anchoredObjects.length = 0;
         xrHitTestSource.cancel();
         xrHitTestSource = null;
@@ -125,72 +192,6 @@
       }
 
       function onSessionEnded() {}
-
-      const MAX_ANCHORED_OBJECTS = 10;
-      let anchoredObjects = [];
-
-      function addAnchoredObjectsToScene(anchor, position) {
-        let stereo = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
-        scene.addNode(stereo);
-
-        const { bufferSource, source3d } = createAudioSource(position);
-
-        anchoredObjects.push({
-          anchoredObject: stereo,
-          anchor,
-          audioSource: bufferSource,
-          source3d
-        });
-
-        if (anchoredObjects.length > MAX_ANCHORED_OBJECTS) {
-          const old = anchoredObjects.shift();
-          old.audioSource.stop();
-          scene.removeNode(old.anchoredObject);
-          old.anchor.delete();
-        }
-      }
-
-      function onSelect() {
-        if (!reticle.visible) return;
-        const pose = reticleHitTestResult.getPose(xrRefSpace).transform.position;
-        reticleHitTestResult.createAnchor().then(anchor => {
-          addAnchoredObjectsToScene(anchor, [pose.x, pose.y, pose.z]);
-        }).catch(err => console.error("Could not create anchor:", err));
-      }
-
-      function onXRFrame(t, frame) {
-        const session = frame.session;
-        const viewerPose = frame.getViewerPose(xrRefSpace);
-
-        reticle.visible = false;
-        if (xrHitTestSource && viewerPose) {
-          const hits = frame.getHitTestResults(xrHitTestSource);
-          if (hits.length > 0) {
-            const hitPose = hits[0].getPose(xrRefSpace);
-            reticle.visible = true;
-            reticle.matrix = hitPose.transform.matrix;
-            reticleHitTestResult = hits[0];
-          }
-        }
-
-        for (let {anchoredObject, anchor, source3d} of anchoredObjects) {
-          if (!frame.trackedAnchors.has(anchor)) continue;
-          const ap = frame.getPose(anchor.anchorSpace, xrRefSpace);
-          anchoredObject.matrix = ap.transform.matrix;
-
-          const pos = [
-            ap.transform.matrix[12],
-            ap.transform.matrix[13],
-            ap.transform.matrix[14],
-          ];
-          source3d.setPosition(pos[0], pos[1], pos[2]);
-        }
-
-        scene.startFrame();
-        session.requestAnimationFrame(onXRFrame);
-        scene.drawXRFrame(frame, viewerPose);
-        scene.endFrame();
-      }
 
       function initXR() {
         xrButton = new WebXRButton({
@@ -204,9 +205,7 @@
 
         if (navigator.xr) {
           navigator.xr.isSessionSupported('immersive-ar')
-            .then((supported) => {
-              xrButton.enabled = supported;
-            });
+                      .then(supported => { xrButton.enabled = supported; });
         }
       }
 
