remove opening texts

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
   </head>
   <body>
     <header>
-      <details open>
+      <!-- <details open>
         <summary>Hit Test with Anchors</summary>
         <p>
           This sample demonstrates using hit testing to find intersections on real-world surfaces and then using Anchors to attach a virtual object to that location.
           <a class="back" href="./">Back</a>
         </p>
-      </details>
+      </details> -->
     </header>
     <script type="module">
       import {WebXRButton} from './js/util/webxr-button.js';
