wrong index.html, reduced max sound src to 2

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel='icon' type='image/png' sizes='32x32' href='favicon-32x32.png'>
     <link rel='icon' type='image/png' sizes='96x96' href='favicon-96x96.png'>
     <link rel='stylesheet' href='css/common.css'>
-
     <title>Hit Test with Anchors</title>
+    <script src="https://cdn.jsdelivr.net/npm/resonance-audio/build/resonance-audio.min.js"></script>
   </head>
   <body>
     <header>
@@ -25,46 +25,173 @@
       import {WebXRButton} from './js/util/webxr-button.js';
       import {Scene} from './js/render/scenes/scene.js';
       import {Renderer, createWebGLContext} from './js/render/core/renderer.js';
-      import {Node} from './js/render/core/node.js';
       import {Gltf2Node} from './js/render/nodes/gltf2.js';
       import {DropShadowNode} from './js/render/nodes/drop-shadow.js';
       import {vec3} from './js/render/math/gl-matrix.js';
-      import {Ray} from './js/render/math/ray.js';
 
-      // XR globals.
       let xrButton = null;
       let xrRefSpace = null;
       let xrViewerSpace = null;
       let xrHitTestSource = null;
 
-      // WebGL scene globals.
       let gl = null;
       let renderer = null;
       let scene = new Scene();
       scene.enableStats(false);
-
-      let arObject = new Node();
-      arObject.visible = false;
-      scene.addNode(arObject);
-
-      let flower = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
-      arObject.addNode(flower);
 
       let reticle = new Gltf2Node({url: 'media/gltf/reticle/reticle.gltf'});
       reticle.visible = false;
       scene.addNode(reticle);
       let reticleHitTestResult = null;
 
-      // Having a really simple drop shadow underneath an object helps ground
-      // it in the world without adding much complexity.
-      let shadow = new DropShadowNode();
-      vec3.set(shadow.scale, 0.15, 0.15, 0.15);
-      arObject.addNode(shadow);
+      const audioContext = new AudioContext();
+      const resonance = new ResonanceAudio(audioContext);
+      resonance.output.connect(audioContext.destination);
+      audioContext.suspend();
 
-      let flowers = [];
+      let audioBuffer = null;
+      fetch('media/sound/beep.mp3')
+        .then(r => r.arrayBuffer())
+        .then(ab => audioContext.decodeAudioData(ab))
+        .then(decoded => { audioBuffer = decoded; })
+        .catch(console.error);
 
-      // Ensure the background is transparent for AR.
-      scene.clear = false;
+      const MAX_ANCHORED_OBJECTS = 2;
+      let anchoredObjects = [];
+
+      function createAudioSource(position) {
+        if (audioContext.state === 'suspended') audioContext.resume();
+        const source3d = resonance.createSource();
+        source3d.setPosition(position[0], position[1], position[2]);
+
+        const bufferSource = audioContext.createBufferSource();
+        bufferSource.buffer = audioBuffer;
+        bufferSource.loop = true;
+        bufferSource.connect(source3d.input);
+        bufferSource.start();
+
+        return {bufferSource, source3d};
+      }
+
+      function addAnchoredObjectsToScene(anchor, position) {
+        const stereo = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
+        stereo.visible = true;
+
+        let shadow = new DropShadowNode();
+        vec3.set(shadow.scale, 0.15, 0.15, 0.15);
+        stereo.addNode(shadow);
+
+        scene.addNode(stereo);
+
+        const audioSource = createAudioSource(position);
+
+        anchor.context = { sceneObject: stereo, audioSource };
+        anchoredObjects.push(anchor);
+
+        if (anchoredObjects.length > MAX_ANCHORED_OBJECTS) {
+          const old = anchoredObjects.shift();
+          old.context.audioSource.bufferSource.stop();
+          scene.removeNode(old.context.sceneObject);
+          old.delete();
+        }
+      }
+
+      function onSelect() {
+        if (!reticle.visible) return;
+        const pose = reticleHitTestResult.getPose(xrRefSpace).transform.position;
+        reticleHitTestResult.createAnchor().then(anchor => {
+          addAnchoredObjectsToScene(anchor, [pose.x, pose.y, pose.z]);
+        }, err => console.error("Could not create anchor:", err));
+      }
+
+      function onXRFrame(t, frame) {
+        const session = frame.session;
+        const viewerPose = frame.getViewerPose(xrRefSpace);
+
+        reticle.visible = false;
+        if (xrHitTestSource && viewerPose) {
+          const hits = frame.getHitTestResults(xrHitTestSource);
+          if (hits.length > 0) {
+            const hitPose = hits[0].getPose(xrRefSpace);
+            reticle.visible = true;
+            reticle.matrix = hitPose.transform.matrix;
+            reticleHitTestResult = hits[0];
+          }
+        }
+
+        if (viewerPose) {
+          resonance.setListenerFromMatrix({elements: viewerPose.transform.matrix});
+        }
+
+        for (const anchor of frame.trackedAnchors) {
+          const pose = frame.getPose(anchor.anchorSpace, xrRefSpace);
+          if (!pose || !anchor.context) continue;
+
+          const object = anchor.context.sceneObject;
+          const pos = [
+            pose.transform.matrix[12],
+            pose.transform.matrix[13],
+            pose.transform.matrix[14],
+          ];
+
+          object.matrix = pose.transform.matrix;
+          object.visible = true;
+
+          if (anchor.context.audioSource) {
+            anchor.context.audioSource.source3d.setPosition(pos[0], pos[1], pos[2]);
+          }
+        }
+
+        scene.startFrame();
+        session.requestAnimationFrame(onXRFrame);
+        scene.drawXRFrame(frame, viewerPose);
+        scene.endFrame();
+      }
+
+      function onRequestSession() {
+        return navigator.xr.requestSession('immersive-ar', {
+          requiredFeatures: ['local', 'hit-test', 'anchors']
+        }).then(onSessionStarted);
+      }
+
+      function onSessionStarted(session) {
+        session.addEventListener('end', onSessionEnded);
+        session.addEventListener('select', onSelect);
+
+        if (!gl) {
+          gl = createWebGLContext({ xrCompatible: true });
+          renderer = new Renderer(gl);
+          scene.setRenderer(renderer);
+        }
+
+        session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+
+        session.requestReferenceSpace('viewer').then(refSpace => {
+          xrViewerSpace = refSpace;
+          return session.requestHitTestSource({ space: xrViewerSpace });
+        }).then(hitTestSource => {
+          xrHitTestSource = hitTestSource;
+        });
+
+        session.requestReferenceSpace('local').then(refSpace => {
+          xrRefSpace = refSpace;
+          session.requestAnimationFrame(onXRFrame);
+        });
+      }
+
+      function onEndSession(session) {
+        for (const anchor of anchoredObjects) {
+          anchor.context.audioSource.bufferSource.stop();
+          scene.removeNode(anchor.context.sceneObject);
+          anchor.delete();
+        }
+        anchoredObjects.length = 0;
+        xrHitTestSource.cancel();
+        xrHitTestSource = null;
+        session.end();
+      }
+
+      function onSessionEnded() {}
 
       function initXR() {
         xrButton = new WebXRButton({
@@ -78,137 +205,10 @@
 
         if (navigator.xr) {
           navigator.xr.isSessionSupported('immersive-ar')
-                      .then((supported) => {
-            xrButton.enabled = supported;
-          });
+                      .then(supported => { xrButton.enabled = supported; });
         }
       }
 
-      function onRequestSession() {
-        return navigator.xr.requestSession('immersive-ar', {requiredFeatures: ['local', 'hit-test', 'anchors']})
-                           .then((session) => {
-          xrButton.setSession(session);
-          onSessionStarted(session);
-        });
-      }
-
-      function onSessionStarted(session) {
-        session.addEventListener('end', onSessionEnded);
-        session.addEventListener('select', onSelect);
-
-        if (!gl) {
-          gl = createWebGLContext({
-            xrCompatible: true
-          });
-
-          renderer = new Renderer(gl);
-
-          scene.setRenderer(renderer);
-        }
-
-        session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
-
-        // In this sample we want to cast a ray straight out from the viewer's
-        // position and render a reticle where it intersects with a real world
-        // surface. To do this we first get the viewer space, then create a
-        // hitTestSource that tracks it.
-        session.requestReferenceSpace('viewer').then((refSpace) => {
-          xrViewerSpace = refSpace;
-          session.requestHitTestSource({ space: xrViewerSpace }).then((hitTestSource) => {
-            xrHitTestSource = hitTestSource;
-          });
-        });
-
-        session.requestReferenceSpace('local').then((refSpace) => {
-          xrRefSpace = refSpace;
-
-          session.requestAnimationFrame(onXRFrame);
-        });
-      }
-
-      function onEndSession(session) {
-        anchoredObjects.clear();
-        xrHitTestSource.cancel();
-        xrHitTestSource = null;
-        session.end();
-      }
-
-      function onSessionEnded(event) {
-        xrButton.setSession(null);
-      }
-
-      const MAX_ANCHORED_OBJECTS = 2;
-      let anchoredObjects = [];
-      function addAnchoredObjectsToScene(anchor) {
-        let flower = new Gltf2Node({url: 'media/gltf/stereo/stereo.gltf'});
-        scene.addNode(flower);
-        anchoredObjects.push({
-          anchoredObject: flower,
-          anchor: anchor
-        });
-
-        // For performance reasons if we add too many objects start
-        // removing the oldest ones to keep the scene complexity
-        // from growing too much.
-        if (anchoredObjects.length > MAX_ANCHORED_OBJECTS) {
-          let objectToRemove = anchoredObjects.shift();
-          scene.removeNode(objectToRemove.anchoredObject);
-          objectToRemove.anchor.delete();
-        }
-      }
-
-      let rayOrigin = vec3.create();
-      let rayDirection = vec3.create();
-      function onSelect(event) {
-        if (reticle.visible) {
-          // Create an anchor.
-          reticleHitTestResult.createAnchor().then((anchor) => {
-            addAnchoredObjectsToScene(anchor);
-          }, (error) => {
-            console.error("Could not create anchor: " + error);
-          });
-        }
-      }
-
-      // Called every time a XRSession requests that a new frame be drawn.
-      function onXRFrame(t, frame) {
-        let session = frame.session;
-        let pose = frame.getViewerPose(xrRefSpace);
-
-        reticle.visible = false;
-
-        // If we have a hit test source, get its results for the frame
-        // and use the pose to display a reticle in the scene.
-        if (xrHitTestSource && pose) {
-          let hitTestResults = frame.getHitTestResults(xrHitTestSource);
-          if (hitTestResults.length > 0) {
-            let pose = hitTestResults[0].getPose(xrRefSpace);
-            reticle.visible = true;
-            reticle.matrix = pose.transform.matrix;
-            reticleHitTestResult = hitTestResults[0];
-          }
-        }
-
-        for (const {anchoredObject, anchor} of anchoredObjects) {
-          // only update the object's position if it's still in the list
-          // of frame.trackedAnchors
-          if (!frame.trackedAnchors.has(anchor)) {
-            continue;
-          }
-          const anchorPose = frame.getPose(anchor.anchorSpace, xrRefSpace);
-          anchoredObject.matrix = anchorPose.transform.matrix;
-        }
-
-        scene.startFrame();
-
-        session.requestAnimationFrame(onXRFrame);
-
-        scene.drawXRFrame(frame, pose);
-
-        scene.endFrame();
-      }
-
-      // Start the XR application.
       initXR();
     </script>
   </body>
